<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_numpy</name>
  <version>0.0.3</version>
  <description>A collection of conversion functions for extracting numpy arrays from messages</description>

  <author email="wieser@mit.edu">Eric Wieser</author>
  <!-- ROS 1 ros_numpy -->
  <maintainer email="wieser@mit.edu">Eric Wieser</maintainer>
  <!-- ROS 2 -->
  <maintainer email="tom@boxrobotics.ai">Tom Panzarella</maintainer>

  <license>MIT</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>python3-nose</test_depend>
  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
